# C_Socket

./: .gitignore  BVS (1).pptx  Bugs.txt  CMakeLists.txt  Links.txt  README.md  ServerSocket.sln  ToDo.md  VisualStudio Code.txt
ColorPrinter/: ColorPrinter.c  ColorPrinter.h  ColorPrinter.vcxproj  ColorPrinter.vcxproj.filters
Dokumente/: Aufgabenstellung.txt  BVS (2).pptx  BVS.pptx  BvS - C Socket Dokumentation - Gruppe 8.docx  BvS - C Socket Präsentation - Gruppe 8.pptx  Dokumentation.docx  HTML Respones.txt  PresentationOrder.txt  ProjectStats.txt  Präsentation - Gruppe 8.pptx  ToDo & Bugs.txt
Dokumente/StateSystem/: StateSystem.dia
List/: List.c  List.h  List.vcxproj  List.vcxproj.filters  test.c
ServerSocket/: Client.c  Client.h  Command.h  CommandToken.c  CommandToken.h  Config.h  ConnectionState.c  ConnectionState.h  IOSocket.c  IOSocket.h  Server.c  Server.h  ServerSocket  ServerSocket.run  ServerSocket.vcxproj  ServerSocket.vcxproj.filters  SocketErrorCode.h  Thread.c  main  main.c
ServerSocket/Client/: Client.h
ServerSocket/Server/: Server.c  Server.h
SocketApplication/: ApplicationState.c  ApplicationState.h  Command.h  CommandError.h  CommandManager.c  CommandManager.h  CommandToken.c  CommandToken.h  CommunicationRole.h  FileError.h  SocketApplication.rc  SocketApplication.vcxproj  SocketApplication.vcxproj.filters  SocketApplicationData.c  SocketApplicationData.h  Test.c  Test.h  UserSytem.c  UserSytem.h  index.html  main.c  main.h  resource1.h
SocketApplication/Data/: OtherWurst.txt  Wurst.txt
SocketFileManager/: ._FileManager.h  ._OSError.h  DeleteMe.c  FileManager.c  FileManager.h  FileManagerErrorCodes.c  FileManagerErrorCodes.h  OSError.c  OSError.h  OSFileError.c  OSFileError.h  Path.c  Path.h  PathList.c  PathList.h  SocketFileManager.vcxproj  SocketFileManager.vcxproj.filters  test.c
SocketSystem/: AsyncLock.c  AsyncLock.h  Client.c  Client.h  CommandToken.c  CommandToken.h  ConnectionState.c  ConnectionState.h  IOSocket.c  IOSocket.h  IPVersion.c  IPVersion.h  Semaphore.c  Semaphore.h  Server.c  Server.h  SocketError.c  SocketErrorCode.h  SocketSystem.vcxproj  SocketSystem.vcxproj.filters  Thread.c  Thread.h
TextColor/: TextColor.c  TextColor.h  TextColor.vcxproj  TextColor.vcxproj.filters
UnitTester/: CMakeLists.txt  TestMain.c  Tester.c  Tester.h  UnitTester.vcxproj  UnitTester.vcxproj.filters
UnitTester/TestOSFileFolder/A/B/C/: a.txt
UnitTester/Testscripts/: FileManagerTest.c  FileManagerTest.h  ListTest.c  ListTest.h  PathTest.c  PathTest.h
